# Mandelbrot-explorer

./: Buddhabrot.cpp  Buddhabrot.h  CMakeLists.txt  MandelbrotSet.cpp  MandelbrotSet.h  README.md  StandardMandelbrotSet.cpp  StandardMandelbrotSet.h  config.ini  main.cpp
